# yhack

./: .gitignore  README.md  docker-compose.yml  implementation-plan.md
CantNameRepos/: .gitignore
CantNameRepos/root/apps/backend/: pyproject.toml
CantNameRepos/root/apps/backend/acne_care_navigation_api.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
CantNameRepos/root/apps/backend/app/: main.py
CantNameRepos/root/apps/backend/app/api/: deps.py  router.py
CantNameRepos/root/apps/backend/app/application/dto/: provider_dto.py  result_dto.py  rule_dto.py
CantNameRepos/root/apps/backend/app/application/use_cases/: evaluate_acne_case.py  get_providers_for_recommendation.py
CantNameRepos/root/apps/backend/app/domain/entities/: cost_bundle.py  intake.py  plan.py  provider.py  recommendation.py
CantNameRepos/root/apps/backend/app/domain/enums/: care_setting.py  complaint_category.py
CantNameRepos/root/apps/backend/app/domain/rules/: matcher.py
CantNameRepos/root/apps/backend/app/domain/services/: recommendation_engine.py  red_flag_evaluator.py  scope_gate.py
CantNameRepos/root/apps/backend/app/infrastructure/config/: settings.py
CantNameRepos/root/apps/backend/scripts/: seed_mongo.py  setup_backend.sh
CantNameRepos/root/apps/backend/seed/: plans.json  providers.json
backend/: .env.example  Dockerfile  pyproject.toml  requirements-dev.txt  requirements.txt
backend/alembic/: env.py
backend/alembic/versions/: 001_initial_schema.py
backend/app/: config.py  main.py
backend/app/api/: auth_deps.py  deps.py
backend/app/db/: mongodb.py  postgres.py  tables.py
backend/app/db/models/: user.py
backend/app/db/repositories/: user_repository.py
backend/app/models/: api.py
backend/app/routes/: __init__.py  auth.py  confirm.py  estimate.py  gi_assistant.py  health.py  hospitals.py  intake.py  providers.py  users.py
backend/app/services/: auth0_jwt.py  confirmation_llm.py  csv_import.py  estimate_service.py  gi_symptom_refinement.py  gi_tree_assistant.py  insurance_options.py  intake.py  jwt_auth.py  oop.py  passwords.py  payer_mapping.py  personal_assistant.py  plan_rules.py  pricing.py  provenance.py  safety_crisis.py  sample_seed_cleanup.py  scenario_to_bundle.py  specialty_config.py
backend/tests/: conftest.py  test_auth0_jwt.py  test_csv_import.py  test_insurance_options.py  test_jwt_auth.py  test_prod_requirements_smoke.py  test_safety_crisis.py  test_sample_seed_cleanup.py  test_users_me.py
backend/tests/fixtures/csv_az/: hospital_rates_clean.csv  providers.csv
backend/tests/fixtures/csv_samples/: insurers.csv  prices.csv  procedures.csv
backend/tests/integration/: test_api.py  test_confirm.py  test_hospitals.py  test_payment_table.py
backend/tests/unit/: test_confirmation_llm.py  test_intake.py  test_plan_rules.py  test_pricing.py  test_scenario_to_bundle.py
(+125 files in other folders)
